# DirectXCustomEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  GameEngine.sln  README.md
Benchmarks/: CMakeLists.txt
EntityEngine/: CMakeLists.txt
EntityEngine/Command/: Command.h
EntityEngine/Components/: BaseComponent.h  CameraComponent.cpp  CameraComponent.h  CameraComponentECS.cpp  CameraComponentECS.h  ComponentPool.h  TransformComponent.cpp  TransformComponent.h  TransformComponentECS.h
EntityEngine/Components/Meshes/: MeshRenderComponent.h  ModelRenderComponent.cpp  ShapeRenderComponent.cpp
EntityEngine/Core/: Renderer.cpp  Renderer.h
EntityEngine/ECS/: Registry.h
EntityEngine/Main/: ECS.h  Game.cpp  Game.h  Logger.h  NullTimer.h  Singleton.h  StepTimer.h  Timer.h
EntityEngine/Managers/: InputManager.cpp  InputManager.h  SceneManager.cpp  SceneManager.h  TextureManager.cpp  TextureManager.h
EntityEngine/Prefabs/: CameraFixed.cpp  CameraFixed.h  FreeMoveCamera.h  ModelObject.h
EntityEngine/Prefabs/Shapes/: Circle.h  Cube.cpp  Cube.h  Shape.cpp
EntityEngine/SceneClasses/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
EntityEngine/Sets/: SparseSet.h
EntityEngine/Structs/: KeyStructs.h
EntityEngine/Utils/: Locator.h
Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  Main.cpp  imgui.ini  pch.h
Game/Commands/: ChangeMouseCommand.h  QuitCommand.h
Game/Main/: Main.cpp
Game/Scene/: TestScene.cpp  TestScene.h
Game/Scenes/: TestScene.cpp  TestScene.h
Game/Utils/: SceneUtils.h
GameEngine/: CMakeLists.txt  Game.cpp  Game.h  GameEngine.vcxproj  GameEngine.vcxproj.filters  pch.h
GameEngine/Command/: Command.h
GameEngine/Components/: BaseComponent.h  CameraComponent.cpp  CameraComponent.h  ComponentPool.h  TransformComponent.cpp  TransformComponent.h  TransformComponentECS.h
GameEngine/Components/Meshes/: MeshRenderComponent.cpp  MeshRenderComponent.h  ModelRenderComponent.cpp  ModelRenderComponent.h  ShapeRenderComponent.cpp  ShapeRenderComponent.h
GameEngine/Core/: DeviceResources.h  Renderer.cpp  Renderer.h
GameEngine/ECS/: ECS.h  Entity.h  Registry.h
GameEngine/ECS/Systems/: TransformSystem.h
GameEngine/Main/: ECS.h  Game.cpp  Game.h  Logger.cpp  Logger.h  NullTimer.h  StepTimer.h  Timer.h
GameEngine/Managers/: InputManager.cpp  InputManager.h  SceneManager.cpp  SceneManager.h  TextureManager.cpp  TextureManager.h
GameEngine/Prefabs/: CameraFixed.cpp  CameraFixed.h  FreeMoveCamera.cpp  FreeMoveCamera.h  ModelObject.cpp  ModelObject.h
GameEngine/Prefabs/Shapes/: Circle.cpp  Circle.h  Cube.cpp  Cube.h  Shape.cpp  Shape.h
GameEngine/SceneClasses/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
GameEngine/Sets/: SparseSet.h
GameEngine/Utils/: EngineUtils.h  GameHandler.h  Locator.h  Utils.h
src/: DirectX12CustomEngine.sln  DirectX12CustomEngine.vcxproj  DirectX12CustomEngine.vcxproj.filters  Game.cpp  Game.h  Logger.cpp  Logger.h  Main.cpp  SceneUtils.h  Utils.h  d3dx12.h  pch.h
src/Command/: Command.h
src/Components/: BaseComponent.h  CameraComponent.cpp  CameraComponent.h  CameraFixed.h  MeshRenderComponent.cpp  MeshRenderComponent.h  TestComponent.cpp  TestComponent.h  TransformComponent.cpp  TransformComponent.h
src/Core/: DeviceResources.cpp  Game.cpp  Game.h  Main.cpp  Renderer.cpp  Renderer.h  d3dx12.h
src/KeyStructs/: KeyStructs.h
src/Managers/: InputManager.cpp  InputManager.h  SceneManager.cpp  SceneManager.h
src/Misc/: GameObject.h  Singleton.h
src/Prefabs/: CameraFixed.cpp  FreeMoveCamera.cpp  FreeMoveCamera.h
src/Prefabs/Shapes/: Circle.cpp  Circle.h  Cube.cpp  Cube.h  Shape.cpp  Shape.h
src/SceneClasses/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  TestScene.cpp  TestScene.h
src/Scenes/: TestScene.cpp  TestScene.h
src/Structs/: Contexts.h  KeyStructs.h
